# AutoUFL

./: .env.example  .gitignore  CHANGELOG.md  README.md  autoUFL.spec  build.py  main.py  pyproject.toml
.github/workflows/: release.yml  test_build.yml
src/: config.py  logger.py  mapping.py  meta.py  processor.py  runtime.py  watcher.py
src/clients/: __init__.py  base_processor.py  registry.py
src/clients/client_one/: client_config.py  processor.py
src/clients/mahan/: client_config.py  processor.py
src/clients/muri/: client_config.py  processor.py
src/clients/renukoot/: client_config.py  processor.py
src/clients/utkal/: client_config.py  processor.py
