[project]
name = "autoUFL"
version = "0.1.1"
description = "Batch Excel-to-CSV normalization utility for UFL uploads"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Viren Hirpara", email = "viren.hirpara.career@gmail.com" }
]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
dependencies = [
    "loguru>=0.7.3",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "python-dotenv>=1.2.2",
    "watchdog>=6.0.0",
]

[project.urls]
Portfolio = "https://www.virenhirpara.com"
GitHub = "https://github.com/viru185"
LinkedIn = "https://www.linkedin.com/in/hirparaviren/"

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
]
